What's New in IDLE 1.0.4?
=========================

*Release date: XX-Jan-2005*

- rpc.py:SocketIO - Large modules were generating large pickles when downloaded
  to the execution server.  The return of the OK response from the subprocess
  initialization was interfering and causing the sending socket to be not
  ready.  Add an IO ready test to fix this.  Moved the polling IO ready test
  into pollpacket(). (Backporting rpc.py rev 1.28 21Jan04)

- Fix typo in rpc.py, s/b "pickle.PicklingError" not "pickle.UnpicklingError".

- If an extension can't be loaded, print warning and skip it instead of
  erroring out.

- Improve error handling when .idlerc can't be created.  This is a partial
  backport of configHandler.py, Revision 1.36,  11Jan05.

- The GUI was hanging if the shell window was closed while a raw_input() 
  was pending.  Restored the quit() of the readline() mainloop().
  http://mail.python.org/pipermail/idle-dev/2004-December/002307.html

- Added a Tk error dialog to run.py inform the user if the subprocess can't
  connect to the user GUI process.  Added a timeout to the GUI's listening
  socket.  Added Tk error dialogs to PyShell.py to announce a failure to bind
  the port or connect to the subprocess.  Clean up error handling during
  connection initiation phase.  This is an update of Python Patch 778323.

What's New in IDLE 1.0.3?
=========================

*Release date: 13-May-2004*

- Keybindings with the Shift modifier now work correctly.  So do bindings which
  use the Space key.  Limit unmodified user keybindings to the function keys.
  Python Bug 775353, IDLEfork Bugs 755647, 761557

What's New in IDLE 1.0.2?
=========================

*Release date: 05-Dec-2003*

- After an exception, run.py was not setting the exception vector. Noam
  Raphael suggested correcting this so pdb's postmortem pm() would work. 
  IDLEfork Patch 844675

- IDLE now does not fail to save the file anymore if the Tk buffer is not a